# AdNova

./: .gitlab-ci.yml  README.md  compose.yaml
infrastructure/backend/: .env.template
infrastructure/caddy/: Caddyfile
infrastructure/caddy/static/admin/: index.html
infrastructure/grafana/: grafana.ini
infrastructure/grafana/provisioning/alerting/: contact_points.yaml  rules.yaml  templates.yaml
infrastructure/grafana/provisioning/dashboards/: providers.yaml
infrastructure/grafana/provisioning/dashboards/AdNova/: statistics.json
infrastructure/grafana/provisioning/dashboards/Backend/: overview.json  requests-by-view.json  requests-overview.json
infrastructure/grafana/provisioning/dashboards/Caddy/: overview.json
infrastructure/grafana/provisioning/dashboards/Celery/: by-task.json  overview.json
infrastructure/grafana/provisioning/dashboards/Postgres/: overview.json
infrastructure/grafana/provisioning/dashboards/Redis/: overview.json
infrastructure/grafana/provisioning/datasources/: datasources.yaml
infrastructure/loadtest/: .env.template
infrastructure/prometheus/: prometheus.yaml
infrastructure/telegram_bot/: .env.template
services/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.staticfiles  README.md  manage.py  pyproject.toml
services/backend/api/v1/ads/: schemas.py  views.py
services/backend/api/v1/advertisers/: tests.py
services/backend/api/v1/generate/: schemas.py  views.py
services/backend/api/v1/stats/: schemas.py
services/backend/api/v1/time/: schemas.py  tests.py
services/backend/apps/advertiser/: apps.py  models.py
services/backend/apps/advertiser/tests/: test_advertiser_model.py
services/backend/apps/campaign/: admin.py  apps.py  models.py  validators.py
services/backend/apps/campaign/tests/: test_campaign_model.py
services/backend/apps/client/: admin.py  apps.py  tests.py
services/backend/apps/mlscore/: admin.py  models.py  tests.py
services/backend/config/: asgi.py  settings.py  urls.py
services/backend/integrations/yandexai/: healthcheck.py  moderation.py
services/backend/integrations/yandexai/generators/: ad_text.py
services/backend/scripts/: initdb
services/loadtest/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  go.mod  main.go
services/loadtest/mocks/: bulk_advertisers.json  bulk_clients.json  campaigns.json  ml_scores.json
services/loadtest/static/: index.html
services/telegram_bot/: .env.template  Dockerfile  README.md  config.py  main.py  pyproject.toml
services/telegram_bot/api/: errors.py  schemas.py
services/telegram_bot/commands/: help.py  logout.py
services/telegram_bot/dialogs/: campaigns.py
services/telegram_bot/middlewares/: auth.py
services/telegram_bot/states/: campaigns.py  start.py
solution/: README.md  compose.yaml
solution/infrastructure/: .gitignore
solution/infrastructure/backend/: .env.template
solution/infrastructure/grafana/provisioning/dashboards/AdNova/: statistics.json
solution/services/backend/: .env.template  Dockerfile  Dockerfile.staticfiles  README.md  pyproject.toml
solution/services/backend/api/v1/: router.py
solution/services/backend/api/v1/ads/: views.py
solution/services/backend/api/v1/advertisers/: schemas.py  tests.py  views.py
solution/services/backend/api/v1/campaigns/: schemas.py  utils.py  views.py
solution/services/backend/api/v1/clients/: schemas.py  tests.py  views.py
solution/services/backend/api/v1/generate/: schemas.py
solution/services/backend/api/v1/report/: schemas.py  views.py
solution/services/backend/api/v1/stats/: tests.py  views.py
solution/services/backend/api/v1/time/: views.py
solution/services/backend/apps/advertiser/: admin.py  models.py
solution/services/backend/apps/advertiser/migrations/: 0001_initial.py
solution/services/backend/apps/advertiser/tests/: test_advertiser_model.py  test_advertiser_statistics.py
solution/services/backend/apps/campaign/: forms.py  models.py  tasks.py  validators.py
solution/services/backend/apps/campaign/management/commands/: init_cache.py
solution/services/backend/apps/campaign/migrations/: 0001_initial.py
solution/services/backend/apps/campaign/tests/: test_campaign_click_model.py  test_campaign_impression_model.py  test_campaign_model.py  test_campaign_report_model.py  test_campaign_statistics.py
solution/services/backend/apps/client/: models.py
solution/services/backend/apps/client/migrations/: 0001_initial.py
solution/services/backend/apps/mlscore/: apps.py  models.py  tests.py
solution/services/backend/apps/mlscore/migrations/: 0001_initial.py
solution/services/backend/config/: celery.py  settings.py  urls.py  wsgi.py
solution/services/backend/integrations/yandexai/: healthcheck.py  moderation.py
solution/services/backend/integrations/yandexai/generators/: ad_text.py
solution/services/telegram_bot/: .dockerignore  .env.template  Dockerfile  config.py  main.py  pyproject.toml
solution/services/telegram_bot/api/: client.py  schemas.py
solution/services/telegram_bot/commands/: campaigns.py  start.py  stats.py
solution/services/telegram_bot/dialogs/: campaigns.py  start.py  utils.py
solution/services/telegram_bot/filters/: auth.py
solution/services/telegram_bot/middlewares/: throttling.py
solution/services/telegram_bot/states/: auth.py  campaign.py  campaigns.py
solution/tests/: README.md
solution/tests/e2e/: README.md  conftest.py  pyproject.toml
solution/tests/e2e/tests/: test_ad_text_generation.py  test_backend_health.py
tests/: README.md
tests/e2e/: .env.template  README.md  conftest.py  pyproject.toml
